example-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  namespace: example-app
  annotations:
    kubernetes.io/ingress.class: "system-ingress"
spec:
  #ingressClassName: "system-ingress"
  rules:
  - host: "app.example.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: example-app
            port:
              name: web
              #number: 8080
