example-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: example-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-app
        image: fabxc/instrumented_app
        ports:
        - name: web
          containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: example-app
  namespace: example-app
  labels:
    app: example-app
spec:
  selector:
    app: example-app
  ports:
  - name: web
    port: 8080
#---
#kind: Service
#apiVersion: v1
#metadata:
#  name: example-app-np
#  namespace: example-app
#  labels:
#    app: example-app
#spec:
#  type: NodePort
#  selector:
#    app: example-app
#  ports:
#  - name: web
#    port: 8080
#    nodePort: 30030
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  namespace: example-app
  annotations:
    kubernetes.io/ingress.class: "system-ingress"
spec:
  #ingressClassName: "system-ingress"
  rules:
  - host: "app.example.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: example-app
            port:
              name: web
              #number: 8080
